<resources>
	<string name="app_name">Barcode</string>

	<string name="hello_world">Hello world!</string>
	<string name="action_settings">Settings</string>
	<string name="preference_file_key">barcode</string>
	<string name="barcodeNo">barcodeNo</string>

	<string name="landscape_message">This is Landscape mode fragment</string>
	<string name="portrait_message">This is Portrait mode fragment</string>

	<string name="start_browser_a">Start Browser with VIEW action</string>
	<string name="start_browser_b">Start Browser with LAUNCH action</string>
	<string name="start_browser_c">Exception Condition</string>

	<string name="start_note">Start Notification</string>
	<string name="cancel_note">Cancel Notification</string>
	<string name="update_note">Update Notification</string>

	<string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
		send downstream messages to this app.
	</string>
	<string name="registering_message">Generating InstanceID token...</string>
	<string name="token_error_message">An error occurred while either fetching the InstanceID token,
		sending the fetched token to the server or subscribing to the PubSub topic. Please try
		running the sample again.
	</string>

</resources>
