<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:background="#7bae16">

	<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/landscape_message"
			android:textColor="#000000"
			android:textSize="20px"/>
	<Button android:id="@+id/start_browser_a"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/start_browser_a"/>
	<Button android:id="@+id/start_browser_b"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/start_browser_b"/>

	<Button android:id="@+id/start_browser_c"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/start_browser_c"/>

</LinearLayout>
